5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1650_2449.log
== SUBMITION (2019-04-09 13:46:17) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)=0):
	print("Nao tem solucao")
	else:
		print(x,y)
-- EXECUTION TIME:
0.164091
-- ERROR:
  File "/home/codebench/codes/1650/2449/main.py", line 9
    if((a*e-b*d)=0):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:46:35) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)=0):
	print("Nao tem solucao")
	else:
		print(x,y)
-- ERROR:
File "XXXX", line 9
    if((a*e-b*d)=0):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:46:48) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
	else:
		print(x,y)
-- EXECUTION TIME:
0.204703
-- ERROR:
  File "/home/codebench/codes/1650/2449/main.py", line 11
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:46:50) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
	else:
		print(x,y)
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:47:05) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x,y)
-- EXECUTION TIME:
0.185026
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:47:08) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x,y)
-- EXECUTION TIME:
0.159138
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:47:08) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x,y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:48:33) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.168753
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:48:34) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:48:57) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:49:28) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:50:15) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 8
    y=(f*a-c*d)/(a*e-b*d)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:50:17) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 8
    y=(f*a-c*d)/(a*e-b*d)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:50:20) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
File "XXXX", line 8
    y=(f*a-c*d)/(a*e-b*d)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:50:24) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:08:29) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:10:44) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)!=0):
	print(x)
	print(y)
else:
	print("Nao tem solucao")
-- EXECUTION TIME:
0.153191
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:11:13) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.15012
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:11:16) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
if((a*e-b*d)==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:12:03) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
z=(a*e)-(b*d)
if(z==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- EXECUTION TIME:
0.11055
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1650/2449/main.py", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:12:04) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)/(a*e-b*d)
y=(f*a-c*d)/(a*e-b*d)
z=(a*e)-(b*d)
if(z==0):
	print("Nao tem solucao")
else:
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:12:51) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)
y=(f*a-c*d)
z=(a*e)-(b*d)
if(z==0):
	print("Nao tem solucao")
else:
	print(x/z)
	print(y/z)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:13:02) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)
y=(f*a-c*d)
z=(a*e)-(b*d)
if(z==0):
	print("Nao tem solucao")
else:
	print(x/z)
	print(y/z)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:13:07) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)
y=(f*a-c*d)
z=(a*e)-(b*d)
if(z==0):
	print("Nao tem solucao")
else:
	print(x/z)
	print(y/z)
-- EXECUTION TIME:
0.185323
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:15:45) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)
y=(f*a-c*d)
z=(a*e)-(b*d)
if(z==0):
	print("Nao tem solucao")
else:
	print(x/z)
	print(y/z)
-- EXECUTION TIME:
0.257492
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:15:59) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)
y=(f*a-c*d)
z=(a*e)-(b*d)
if(z==0):
	print("Nao tem solucao")
else:
	print(x/z)
	print(y/z)
-- EXECUTION TIME:
0.137622
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:16:01) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)
y=(f*a-c*d)
z=(a*e)-(b*d)
if(z==0):
	print("Nao tem solucao")
else:
	print(x/z)
	print(y/z)
-- EXECUTION TIME:
0.167797
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:16:04) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)
y=(f*a-c*d)
z=(a*e)-(b*d)
if(z==0):
	print("Nao tem solucao")
else:
	print(x/z)
	print(y/z)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:16:05) 
-- CODE:
a=float(input("digite a:    "))
b=float(input("digite b:    "))
c=float(input("digite c:    "))
d=float(input("digite d:    "))
e=float(input("digite e:    "))
f=float(input("digite f:    "))
x=(c*e-b*f)
y=(f*a-c*d)
z=(a*e)-(b*d)
if(z==0):
	print("Nao tem solucao")
else:
	print(x/z)
	print(y/z)
-- EXECUTION TIME:
0.160272
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
